compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_char_seq_type.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : char(1)"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..15): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..15): []
        StmtItem@(FileId(1), 0..15): ItemId(0)
          ConstVar@(FileId(1), 0..15): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..15): SizedChar(Expr(BodyId(0)))
              ExprBody@(FileId(1), 13..14)
                Literal@(FileId(1), 13..14): Integer(1)

