compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type-10.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : real4"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        StmtItem@(FileId(1), 0..13): ItemId(0)
          ConstVar@(FileId(1), 0..13): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..13): Real4

