compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type-12.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : boolean"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..15): "<root>"@(dummy)
      StmtBody@(src/main.t:0..15): []
        StmtItem@(src/main.t:0..15): ItemId(0)
          ConstVar@(src/main.t:0..15): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..15): Boolean
