compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type-15.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : string"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..14): "<root>"@(dummy)
      StmtBody@(src/main.t:0..14): []
        StmtItem@(src/main.t:0..14): ItemId(0)
          ConstVar@(src/main.t:0..14): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..14): String
