compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : nat"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Nat

